crates/pg_syntax/tests/snapshots/postgres_regress/advisory_lock@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT\n\tpg_advisory_xact_lock(1), pg_advisory_xact_lock_shared(2),\n\tpg_advisory_xact_lock(1, 1), pg_advisory_xact_lock_shared(2, 2);"
---
SelectStmt@0..132
  Select@0..6 "SELECT"
  Newline@6..7 "\n"
  Newline@7..8 "\t"
  ResTarget@8..31
    FuncCall@8..31
      Ident@8..29 "pg_advisory_xact_lock"
      Ascii40@29..30 "("
      AConst@30..31
        Iconst@30..31 "1"
  Ascii41@31..32 ")"
  Ascii44@32..33 ","
  Whitespace@33..34 " "
  ResTarget@34..64
    FuncCall@34..64
      Ident@34..62 "pg_advisory_xact_lock ..."
      Ascii40@62..63 "("
      AConst@63..64
        Iconst@63..64 "2"
  Ascii41@64..65 ")"
  Ascii44@65..66 ","
  Newline@66..67 "\n"
  Newline@67..68 "\t"
  ResTarget@68..94
    FuncCall@68..94
      Ident@68..89 "pg_advisory_xact_lock"
      Ascii40@89..90 "("
      AConst@90..91
        Iconst@90..91 "1"
      Ascii44@91..92 ","
      Whitespace@92..93 " "
      AConst@93..94
        Iconst@93..94 "1"
  Ascii41@94..95 ")"
  Ascii44@95..96 ","
  Whitespace@96..97 " "
  ResTarget@97..130
    FuncCall@97..130
      Ident@97..125 "pg_advisory_xact_lock ..."
      Ascii40@125..126 "("
      AConst@126..127
        Iconst@126..127 "2"
      Ascii44@127..128 ","
      Whitespace@128..129 " "
      AConst@129..130
        Iconst@129..130 "2"
  Ascii41@130..131 ")"
  Ascii59@131..132 ";"

