crates/pg_syntax/tests/snapshots/postgres_regress/advisory_lock@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT locktype, classid, objid, objsubid, mode, granted\n\tFROM pg_locks WHERE locktype = 'advisory'\n\tORDER BY classid, objid, objsubid;"
---
SelectStmt@0..135
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..15
    ColumnRef@7..15
      Ident@7..15 "locktype"
  Ascii44@15..16 ","
  Whitespace@16..17 " "
  ResTarget@17..24
    ColumnRef@17..24
      Ident@17..24 "classid"
  Ascii44@24..25 ","
  Whitespace@25..26 " "
  ResTarget@26..31
    ColumnRef@26..31
      Ident@26..31 "objid"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..41
    ColumnRef@33..41
      Ident@33..41 "objsubid"
  Ascii44@41..42 ","
  Whitespace@42..43 " "
  ResTarget@43..47
    ColumnRef@43..47
      Mode@43..47 "mode"
  Ascii44@47..48 ","
  Whitespace@48..49 " "
  ResTarget@49..56
    ColumnRef@49..56
      Granted@49..56 "granted"
  Newline@56..57 "\n"
  Newline@57..58 "\t"
  From@58..62 "FROM"
  Whitespace@62..63 " "
  RangeVar@63..71
    Ident@63..71 "pg_locks"
  Whitespace@71..72 " "
  Where@72..77 "WHERE"
  Whitespace@77..78 " "
  AExpr@78..99
    ColumnRef@78..86
      Ident@78..86 "locktype"
    Whitespace@86..87 " "
    Ascii61@87..88 "="
    Whitespace@88..89 " "
    AConst@89..99
      Sconst@89..99 "'advisory'"
  Newline@99..100 "\n"
  Newline@100..101 "\t"
  SortBy@101..117
    Order@101..106 "ORDER"
    Whitespace@106..107 " "
    By@107..109 "BY"
    Whitespace@109..110 " "
    ColumnRef@110..117
      Ident@110..117 "classid"
  Ascii44@117..118 ","
  Whitespace@118..119 " "
  SortBy@119..124
    ColumnRef@119..124
      Ident@119..124 "objid"
  Ascii44@124..125 ","
  Whitespace@125..126 " "
  SortBy@126..134
    ColumnRef@126..134
      Ident@126..134 "objsubid"
  Ascii59@134..135 ";"

