crates/pg_syntax/tests/snapshots/postgres_regress/advisory_lock@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT pg_advisory_unlock_all();
---
SelectStmt@0..32
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..29 "pg_advisory_unlock_all"
  Ascii40@29..30 "("
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

