crates/pg_syntax/tests/snapshots/postgres_regress/alter_operator@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_describe_object(refclassid,refobjid,refobjsubid) as ref, deptype\nFROM pg_depend\nWHERE classid = 'pg_operator'::regclass AND\n      objid = '===(bool,bool)'::regoperator\nORDER BY 1;"
---
SelectStmt@0..189
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..65
    FuncCall@7..57
      Ident@7..25 "pg_describe_object"
      Ascii40@25..26 "("
      ColumnRef@26..36
        Ident@26..36 "refclassid"
      Ascii44@36..37 ","
      ColumnRef@37..45
        Ident@37..45 "refobjid"
      Ascii44@45..46 ","
      ColumnRef@46..57
        Ident@46..57 "refobjsubid"
    Ascii41@57..58 ")"
    Whitespace@58..59 " "
    As@59..61 "as"
    Whitespace@61..62 " "
    RefP@62..65 "ref"
  Ascii44@65..66 ","
  Whitespace@66..67 " "
  ResTarget@67..74
    ColumnRef@67..74
      Ident@67..74 "deptype"
  Newline@74..75 "\n"
  From@75..79 "FROM"
  Whitespace@79..80 " "
  RangeVar@80..89
    Ident@80..89 "pg_depend"
  Newline@89..90 "\n"
  Where@90..95 "WHERE"
  Whitespace@95..96 " "
  BoolExpr@96..177
    AExpr@96..129
      ColumnRef@96..103
        Ident@96..103 "classid"
      Whitespace@103..104 " "
      Ascii61@104..105 "="
      Whitespace@105..106 " "
      TypeCast@106..129
        AConst@106..119
          Sconst@106..119 "'pg_operator'"
        Typecast@119..121 "::"
        TypeName@121..129
          Ident@121..129 "regclass"
    Whitespace@129..130 " "
    And@130..133 "AND"
    Newline@133..134 "\n"
    Whitespace@134..140 "      "
    AExpr@140..177
      ColumnRef@140..145
        Ident@140..145 "objid"
      Whitespace@145..146 " "
      Ascii61@146..147 "="
      Whitespace@147..148 " "
      TypeCast@148..177
        AConst@148..164
          Sconst@148..164 "'===(bool,bool)'"
        Typecast@164..166 "::"
        TypeName@166..177
          Ident@166..177 "regoperator"
  Newline@177..178 "\n"
  SortBy@178..188
    Order@178..183 "ORDER"
    Whitespace@183..184 " "
    By@184..186 "BY"
    Whitespace@186..187 " "
    AConst@187..188
      Iconst@187..188 "1"
  Ascii59@188..189 ";"

