crates/pg_syntax/tests/snapshots/postgres_regress/amutils@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select col, prop, pg_index_column_has_property(o, col, prop)\n  from (values ('foocover'::regclass)) v1(o),\n       (values (1,'orderable'),(2,'asc'),(3,'desc'),\n               (4,'nulls_first'),(5,'nulls_last'),\n               (6,'distance_orderable'),(7,'returnable'),\n               (8, 'bogus')) v2(idx,prop),\n       generate_series(1,3) col\n order by col, idx;"
---
SelectStmt@0..363
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "col"
  Ascii44@10..11 ","
  Whitespace@11..12 " "
  ResTarget@12..16
    ColumnRef@12..16
      Ident@12..16 "prop"
  Ascii44@16..17 ","
  Whitespace@17..18 " "
  ResTarget@18..59
    FuncCall@18..59
      Ident@18..46 "pg_index_column_has_p ..."
      Ascii40@46..47 "("
      ColumnRef@47..48
        Ident@47..48 "o"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      ColumnRef@50..53
        Ident@50..53 "col"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      ColumnRef@55..59
        Ident@55..59 "prop"
  Ascii41@59..60 ")"
  Newline@60..61 "\n"
  Whitespace@61..63 "  "
  From@63..67 "from"
  Whitespace@67..68 " "
  Ascii40@68..69 "("
  RangeSubselect@69..104
    SelectStmt@69..97
      Values@69..75 "values"
      Whitespace@75..76 " "
      Ascii40@76..77 "("
      List@77..97
        TypeCast@77..97
          AConst@77..87
            Sconst@77..87 "'foocover'"
          Typecast@87..89 "::"
          TypeName@89..97
            Ident@89..97 "regclass"
    Ascii41@97..98 ")"
    Ascii41@98..99 ")"
    Whitespace@99..100 " "
    Alias@100..104
      Ident@100..102 "v1"
      Ascii40@102..103 "("
      Ident@103..104 "o"
  Ascii41@104..105 ")"
  Ascii44@105..106 ","
  Newline@106..107 "\n"
  Whitespace@107..114 "       "
  Ascii40@114..115 "("
  RangeSubselect@115..309
    SelectStmt@115..295
      Values@115..121 "values"
      Whitespace@121..122 " "
      Ascii40@122..123 "("
      List@123..136
        AConst@123..124
          Iconst@123..124 "1"
        Ascii44@124..125 ","
        AConst@125..136
          Sconst@125..136 "'orderable'"
      Ascii41@136..137 ")"
      Ascii44@137..138 ","
      Ascii40@138..139 "("
      List@139..146
        AConst@139..140
          Iconst@139..140 "2"
        Ascii44@140..141 ","
        AConst@141..146
          Sconst@141..146 "'asc'"
      Ascii41@146..147 ")"
      Ascii44@147..148 ","
      Ascii40@148..149 "("
      List@149..157
        AConst@149..150
          Iconst@149..150 "3"
        Ascii44@150..151 ","
        AConst@151..157
          Sconst@151..157 "'desc'"
      Ascii41@157..158 ")"
      Ascii44@158..159 ","
      Newline@159..160 "\n"
      Whitespace@160..175 "               "
      Ascii40@175..176 "("
      List@176..191
        AConst@176..177
          Iconst@176..177 "4"
        Ascii44@177..178 ","
        AConst@178..191
          Sconst@178..191 "'nulls_first'"
      Ascii41@191..192 ")"
      Ascii44@192..193 ","
      Ascii40@193..194 "("
      List@194..208
        AConst@194..195
          Iconst@194..195 "5"
        Ascii44@195..196 ","
        AConst@196..208
          Sconst@196..208 "'nulls_last'"
      Ascii41@208..209 ")"
      Ascii44@209..210 ","
      Newline@210..211 "\n"
      Whitespace@211..226 "               "
      Ascii40@226..227 "("
      List@227..249
        AConst@227..228
          Iconst@227..228 "6"
        Ascii44@228..229 ","
        AConst@229..249
          Sconst@229..249 "'distance_orderable'"
      Ascii41@249..250 ")"
      Ascii44@250..251 ","
      Ascii40@251..252 "("
      List@252..266
        AConst@252..253
          Iconst@252..253 "7"
        Ascii44@253..254 ","
        AConst@254..266
          Sconst@254..266 "'returnable'"
      Ascii41@266..267 ")"
      Ascii44@267..268 ","
      Newline@268..269 "\n"
      Whitespace@269..284 "               "
      Ascii40@284..285 "("
      List@285..295
        AConst@285..286
          Iconst@285..286 "8"
        Ascii44@286..287 ","
        Whitespace@287..288 " "
        AConst@288..295
          Sconst@288..295 "'bogus'"
    Ascii41@295..296 ")"
    Ascii41@296..297 ")"
    Whitespace@297..298 " "
    Alias@298..309
      Ident@298..300 "v2"
      Ascii40@300..301 "("
      Ident@301..304 "idx"
      Ascii44@304..305 ","
      Ident@305..309 "prop"
  Ascii41@309..310 ")"
  Ascii44@310..311 ","
  Newline@311..312 "\n"
  Whitespace@312..319 "       "
  RangeFunction@319..343
    List@319..338
      FuncCall@319..338
        Ident@319..334 "generate_series"
        Ascii40@334..335 "("
        AConst@335..336
          Iconst@335..336 "1"
        Ascii44@336..337 ","
        AConst@337..338
          Iconst@337..338 "3"
    Ascii41@338..339 ")"
    Whitespace@339..340 " "
    Alias@340..343
      Ident@340..343 "col"
  Newline@343..344 "\n"
  Whitespace@344..345 " "
  SortBy@345..357
    Order@345..350 "order"
    Whitespace@350..351 " "
    By@351..353 "by"
    Whitespace@353..354 " "
    ColumnRef@354..357
      Ident@354..357 "col"
  Ascii44@357..358 ","
  Whitespace@358..359 " "
  SortBy@359..362
    ColumnRef@359..362
      Ident@359..362 "idx"
  Ascii59@362..363 ";"

